--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Css/Meadia.css">
 </head>
 <body>
-    <h1>Welcome To Journey Of Progress</h1>
+    <h1>Hana Ghulam</h1>
 
 
 
