--- a/Contact Us.html
+++ b/Contact Us.html
@@ -8,7 +8,90 @@
     <link rel="stylesheet" href="Css/Meadia.css">
 </head>
 <body>
-    <h1>Welcome To Journey Of Progress</h1>
+    
+    <header>
+        <div><img src="image/email.png" width="20px" alt="">&nbsp info@company.com
+            <img src="image/email.png" width="20px" alt="">&nbsp Sunny Isles Beach, FL 33160
+        </div>
+
+        <div>
+            <img src="image/facebook.webp" width="50px" alt="">
+            <img src="image/twiter.webp" width="50px" alt="">
+            <img src="image/linkdin.png" width="50px" alt="">
+            <img src="image/insta.png" width="50px" alt="">
+        </div>
+    </header>
+    <main>
+    <section>
+        <div>
+            <h1>VILLA</h1>
+        </div>
+        <div>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="properties.html">Properties</a></li>
+                <li><a href="property.html">Property details</a></li>
+                <li><a href="Contact Us.html">Contact us</a></li>
+                <li><a href="#"> Schedule a visit</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+
+        <div class="page-header">
+            <span class="col-1">
+                <a href="#">Home</a>
+                / Contact Us
+            </span>
+            <h1>Contact Us</h1>
+
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <p>| Contact Us</p>
+            <h1>Get In Touch<br> With Our<br> Agents</h1>
+            <br>
+            <p>When you really need to download free CSS templates, please remember our<br> website TemplateMo. Also,
+                tell your
+                friends about our website. Thank you for<br> visiting. There is a variety of Bootstrap HTML CSS
+                templates on our
+                website. If<br> you need more information, please contact us.</p>
+            <div> <img src="image/phone.png" width="60px" alt="">
+                <span>010-020-0340<br>
+                    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Phone Number</span>
+            </div>
+            <div> <img src="image/email.png" width="40px" alt="">
+                <span>info@villa.co<br>
+                    &nbsp &nbsp &nbsp &nbsp &nbsp Business Email</span>
+            </div>
+        </div>
+
+
+        <div>
+            <p>Full Name</p>
+            <input type="text" id="name" placeholder=" Your Name..."><br>
+            <p>Email Address</p>
+            <input type="text" id="name" placeholder=" Your Email..."><br>
+            <p>Subject</p>
+            <input type="text" id="name" placeholder=" Subject..."><br>
+            <p>Message</p>
+            <textarea name="" id="message" rows="8" cols="35" placeholder="Message"></textarea><br>
+            <button>Send Message</button>
+        </div>
+    </section>
+
+    <section>
+        <iframe src="https://maps.app.goo.gl/gtYg7PAnig1TD2fv9" width="580" height="500" style="border:0;" margin="40px"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    </main>
+
+        <footer>
+        <h2>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. Design:TemplateMo </h2>
+    </footer>
 
 
 
