--- a/Properties.html
+++ b/Properties.html
@@ -8,7 +8,158 @@
     <link rel="stylesheet" href="Css/Meadia.css">
 </head>
 <body>
-    <h1>Welcome To Journey Of Progress</h1>
+      <header>
+        <div><img src="image/email.png" width="20px" alt="">&nbsp info@company.com
+            <img src="image/email.png" width="20px" alt="">&nbsp Sunny Isles Beach, FL 33160
+        </div>
+
+        <div>
+            <img src="image/facebook.webp" width="50px" alt="">
+            <img src="image/twiter.webp" width="50px" alt="">
+            <img src="image/linkdin.png" width="50px" alt="">
+            <img src="image/insta.png" width="50px" alt="">
+        </div>
+    </header>
+    <main>
+    <section>
+        <div>
+            <h1>VILLA</h1>
+        </div>
+        <div>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Properties.html">Properties</a></li>
+                <li><a href="Property Details.html">Property details</a></li>
+                <li><a href="Contact Us.html".html">Contact us</a></li>
+                <li><a href="#"> Schedule a visit</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+
+        <div class="page-header">
+            <span class="col-1">
+                <a href="#">Home</a>
+                / Properties
+            </span>
+            <h3>Properties</h3>
+
+        </div>
+
+        <div class="section properties">
+            <ul class="properties-filter">
+                <li>
+                    <a href="#"> Show All</a>
+                </li>
+                <li>
+                    <a href="#"> Appartment</a>
+                </li>
+                <li>
+                    <a href="#"> Villa House</a>
+                </li>
+                <li>
+                    <a href="#"> Penthouse</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <div> <img src="image/img4.jpg" width="280px" height="230px" alt=""><br>
+            <b>Luxury Villa &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span>$2.264.000</span></b>
+            <h3>18 New streat miami,OR97219</h2>
+                <p>Bedrooms: 8 &nbsp Bathrooms: 8 <br> Area: 545m2 &nbsp Floor: 3<br> Parking: 6 spots</p>
+                <hr>
+                <button> Schedule a visit</button>
+        </div>
+        <br>
+        <div> <img src="image/img6.jpg" width="280px" height="230px" alt=""><br>
+            <b>Luxury Villa &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span>$1.180.000</span></b>
+            <h3>54 New Street Floride.OR<br>27001</h2>
+                <p>Bedrooms: 6 &nbsp Bathrooms: 5 <br> Area: 450m2 &nbsp Floor: 3<br> Parking: 8 spots</p>
+                <hr>
+                <button> Schedule a visit</button>
+        </div>
+
+        <div> <img src="image/img1.jpg" width="280px" height="230px" alt=""><br>
+            <b>Luxury Villa &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span>$2.264.000</span></b>
+            <h3>26 Mid Street Portland,Or<br>38540</h2>
+                <p>Bedrooms: 5 &nbsp Bathrooms: 4 <br> Area: 225m2 &nbsp Floor: 3<br> Parking: 10 spots</p>
+                <hr>
+                <button> Schedule a visit</button>
+        </div>
+
+    </section>
+
+    <section>
+        <div> <img src="image/img7.jpg" width="280px" height="230px" alt=""><br>
+            <b>Apartment &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span>$584.500</span></b>
+            <h3>12 Hope Street Portland,OR<br>12650</h2>
+                <p>Bedrooms: 4 &nbsp Bathrooms: 3 <br> Area: 125m2 &nbsp Floor: 25th<br> Parking: 2 cars</p>
+                <hr>
+                <button> Schedule a visit</button>
+        </div>
+        <br>
+        <div> <img src="image/img8.jpg" width="280px" height="230px" alt=""><br>
+            <b>Penthouse &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span>$925.600</span></b>
+            <h3>34 Hope street Portland,OR<br>42680</h2>
+                <p>Bedrooms: 4 &nbsp Bathrooms: 4 <br> Area: 180m2 &nbsp Floor: 38th<br> Parking: 2 cars</p>
+                <hr>
+                <button> Schedule a visit</button>
+        </div><br>
+
+        <div> <img src="image/img9.jpg" width="280px" height="230px" alt=""><br>
+            <b>Modern Condo &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span>$450.000</span></b>
+            <h3>18 New streat miami,OR97219</h2>
+                <p>Bedrooms: 3 &nbsp Bathrooms: 2 <br> Area: 165m2 &nbsp Floor: 26th<br> Parking: 3 cars</p>
+                <hr>
+                <button> Schedule a visit</button>
+        </div>
+
+
+
+    </section>
+
+    <section>
+        <div> <img src="image/img1.jpg" width="280px" height="230px" alt=""><br>
+            <b>Luxury Villa &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span>$2.264.000</span></b>
+            <h3>26 Mid Street Portland,Or<br>38540</h2>
+                <p>Bedrooms: 5 &nbsp Bathrooms: 4 <br> Area: 225m2 &nbsp Floor: 3<br> Parking: 10 spots</p>
+                <hr>
+                <button> Schedule a visit</button>
+        </div>
+        <div> <img src="image/img6.jpg" width="280px" height="230px" alt=""><br>
+            <b>Luxury Villa &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span>$1.180.000</span></b>
+            <h3>54 New Street Floride.OR<br>27001</h2>
+                <p>Bedrooms: 6 &nbsp Bathrooms: 5 <br> Area: 450m2 &nbsp Floor: 3<br> Parking: 8 spots</p>
+                <hr>
+                <button> Schedule a visit</button>
+        </div>
+        <div> <img src="image/img4.jpg" width="280px" height="230px" alt=""><br>
+            <b>Luxury Villa &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span>$2.264.000</span></b>
+            <h3>18 New streat miami,OR97219</h2>
+                <p>Bedrooms: 8 &nbsp Bathrooms: 8 <br> Area: 545m2 &nbsp Floor: 3<br> Parking: 6 spots</p>
+                <hr>
+                <button> Schedule a visit</button>
+        </div>
+
+    </section>
+
+
+    <section>
+        <ul>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">>></a></li>
+        </ul>
+    </section>
+    </main>
+
+    <footer>
+        <h2>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. Design:TemplateMo </h2>
+    </footer>
 
 
 
