--- a/Property Details.html
+++ b/Property Details.html
@@ -8,7 +8,156 @@
     <link rel="stylesheet" href="Css/Meadia.css">
 </head>
 <body>
-    <h1>Welcome To Journey Of Progress</h1>
+    
+     <header>
+        <div><img src="image/email.png" width="20px" alt="">&nbsp info@company.com
+            <img src="image/email.png" width="20px" alt="">&nbsp Sunny Isles Beach, FL 33160
+        </div>
+
+        <div>
+            <img src="image/facebook.webp" width="50px" alt="">
+            <img src="image/twiter.webp" width="50px" alt="">
+            <img src="image/linkdin.png" width="50px" alt="">
+            <img src="image/insta.png" width="50px" alt="">
+        </div>
+    </header>
+    <main>
+    <section>
+        <div>
+            <h1>VILLA</h1>
+        </div>
+        <div>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="properties.html">Properties</a></li>
+                <li><a href="Property Details.html">Property details</a></li>
+                <li><a href="Contact Us.html">Contact us</a></li>
+                <li><a href="#"> Schedule a visit</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+
+        <div class="page-header">
+            <span class="col-1">
+                <a href="#">Home</a>
+                / Single Property
+            </span>
+            <h1>Single Property</h1>
+
+        </div>
+    </section>
+
+    <section>
+        <div><img src="image/img6.jpg" width="50%" alt="">
+        </div>
+        <div>
+            <div>
+                <img src="image/icon1.png" alt="">
+                <h2>250 m2</h2>
+                <p>Total Flat Space</p>
+                <hr>
+                <img src="image/icon2.png" alt="">
+                <h2>Contract</h2>
+                <p>Contract Ready</p>
+                <hr>
+                <img src="image/icon3.png" alt="">
+                <h2>Payment</h2>
+                <p>Payment</p>
+                <hr>
+                <img src="image/icon4.png" alt="">
+                <h2>Safety</h2>
+                <p>24/7 Under</p>
+            </div>
+        </div>
+    </section>
+    <section>
+        <p>Apparment</p>
+        <h2>24 New Street Miami, OR 24560</h2>
+        <hr>
+        <p>Get the best villa agency HTML CSS Bootstrap Template for your company website. TemplateMo provides<br> you
+            the
+            best free CSS templates in the world. Please tell your friends about it. Thank you. Cloud bread kogi<br>
+            bitters
+            pitchfork shoreditch tumblr yr succulents single-origin coffee schlitz enamel pin you probably<br> haven't
+            heard
+            of them ugh hella</p>
+        <br>
+        <p>When you look for free CSS templates, you can simply type TemplateMo in any search engine website. In<br>
+            addition, you can type TemplateMo Digital Marketing, TemplateMo Corporate Layouts, etc. Master<br> cleanse
+            +1
+            intelligentsia swag post-ironic, slow-carb chambray knausgaard PBR&B DSA poutine neutra<br> cardigan hoodie
+            pop-up.</p>
+    </section>
+    <section>
+        <div>
+            <h3>Best useful links?</h3>
+
+            <p>Get the best villa website template in HTML CSS<br> and Bootstrap for your business. TemplateMo
+                <br>provides you
+                the best free CSS templates in the<br> world. Please tell your friends about it.
+            </p>
+            <hr>
+            <h3>How does this work?</h3>
+            <p>Dolor almesit amet, consectetur adipiscing elit,<br> sed doesn't eiusmod tempor incididunt ut labore<br>
+                consectetur adipiscing elit, sed do eiusmod<br> tempor incididunt ut labore et dolore magna<br> aliqua.
+            </p>
+            <hr>
+            <h3>Why is Villa Agency the best?</h3>
+            <p>Dolor almesit amet, consectetur adipiscing elit, <br> sed doesn't eiusmod tempor incididunt ut labore<br>
+                consectetur adipiscing elit, sed do eiusmod<br> tempor incididunt ut labore et dolore magna<br> aliqua.
+            </p>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h3>| Best Deal</h3>
+            <h1>Find Your Best</h1>
+        </div>
+        <div>
+            <h1>Deal Right Now!</h1>
+            <button>Appartment</button>
+            <button>Villa House</button>
+            <button>Penthouse</button>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <p>Total Flat Space &nbsp 185 m2
+            </p>
+            <hr>
+            <p>Floor number &nbsp<b> 26th</b>
+            </p>
+            <hr>
+            <p>Number of rooms &nbsp <b> 4 </b></p>
+            <hr>
+            <p>Parking Available &nbsp <b>Yes</b></p>
+            <hr>
+            <p>Payment Process &nbsp <b>Bank</b></p>
+        </div>
+
+        <div> <img src="image/img3.jpg" width="400px" height="300px" alt=""></div>
+        <div>
+            <h4>Extra Info About Property</b>
+                <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit, do<br> eiusmod tempor pack incididunt
+                    ut<br>
+                    labore et dolore magna aliqua <br>quised ipsum suspendisse.</p>
+                <p>
+                    When you need free CSS templates,<br> you can simply type TemplateMo in<br> any search engine
+                    website.
+                    In<br>
+                    addition, you can type TemplateMo<br> Portfolio, TemplateMo One Page<br> Layouts, etc.
+                </p>
+        </div>
+    </section>
+    </main>
+
+    <footer>
+        <h2>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. Design:TemplateMo </h2>
+    </footer>
 
 
 
