Slider button add

--- a/Contact Us.html
+++ b/Contact Us.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conatct | Pakistan Properties</title>
     <link rel="stylesheet" href="Css/Style.css">
     <link rel="stylesheet" href="Css/Meadia.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -52,8 +52,8 @@
                     <h6>Contact Us</h6>
                 </div>
                 <p>
-                    <a href="Home.html">Home</a>
-                    <a href="Properties.html">Contact Us</a>
+                    <a href="Home.html">Home</a>&nbsp;/
+                    <a href="Contact Us.html">Contact Us</a>
                 </p>
             </div>
         </section>
