--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Home | Pakistan Properties</title>
     <link rel="stylesheet" href="Css/Style.css">
     <link rel="stylesheet" href="Css/Meadia.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -42,11 +42,18 @@
             </ul>
         </div>
     </header>
+    
     <main>
 
         <section>
             <div class="banner">
-                <img src="image/banner1.jpg" width="100%" alt="banner">
+                <div class="previous-arrow">
+                     <i class="fa-solid fa-angle-left"></i>
+                </div>
+                <div class="next-arrow">
+                      <i class="fa-solid fa-angle-right"></i>
+                </div>
+                <img src="image/banner1.jpg" width="100%" height="110%" alt="banner">
                 <div class="banner-content">
                     <div class="p">
                         <p>Toronto, <span>Canada</span></p>
@@ -103,7 +110,7 @@
                 </div>
                 <div class="Featured-detail">
                     <div class="detail1">
-                        <img style="margin-right: 25px;" src="image/icon1.png" alt="">
+                        <img style="margin-right: 25px; border: none;" src="image/icon1.png" alt="">
                         <div class="detail-content">
                             <h2>250 m2</h2>
                             <p>Total Flat Space</p>
