--- a/Properties.html
+++ b/Properties.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Properties | Pakistan Properties</title>
     <link rel="stylesheet" href="Css/Style.css">
     <link rel="stylesheet" href="Css/Meadia.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
